--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 									<header>
 										<h2>Collaborative Robotics Lab (2023) </h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Screenshot 2023-12-20 170210.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/edit code.png" alt="" /></a>
 									<p>As an undergraduate researcher at Virginia Tech, I collaborated with another student,  
 										specializing in the development of an interface for human-to-robot interaction, utilizing Python coding language. We achieved success in capturing 
 										10 data points (10 gestures) for human gesture recognition through PyTorch which has contributed to my basic knowledge in both programming and experimental data acquisition
