--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+			<div id="wrapper class="fade-in">
 
 				<!-- Intro -->
 					<div id="intro">
