--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/cro.jpg" width=300 height=400 alt="" /></a>
 									<p>As a new member of CRO, I have rapidly integrated into the environment, contributing to the chassis development 
-										and gaining valuable insights into the team's objectives. Currenlty, I have the responsibilty to brainstorm ideas
+										and gaining valuable insights into the team's objectives. Currently, I have the responsibilty to brainstorm ideas
 										to enhance our robot's capabilities for this year's competition by developing  solutions to navigate and cross 
 										challenging terrains, such as a crater. This exciting engineering challenge is furthering my expertise of problem solving and robot manufacture.</p>
 									<ul class="actions special">
